; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/usb/extr_hso.c_get_serial_by_tty.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/usb/extr_hso.c_get_serial_by_tty.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hso_serial = type { i32 }
%struct.tty_struct = type { %struct.hso_serial* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.hso_serial* (%struct.tty_struct*)* @get_serial_by_tty to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.hso_serial* @get_serial_by_tty(%struct.tty_struct* %0) #0 {
  %2 = alloca %struct.hso_serial*, align 8
  %3 = alloca %struct.tty_struct*, align 8
  store %struct.tty_struct* %0, %struct.tty_struct** %3, align 8
  %4 = load %struct.tty_struct*, %struct.tty_struct** %3, align 8
  %5 = icmp ne %struct.tty_struct* %4, null
  br i1 %5, label %6, label %10

6:                                                ; preds = %1
  %7 = load %struct.tty_struct*, %struct.tty_struct** %3, align 8
  %8 = getelementptr inbounds %struct.tty_struct, %struct.tty_struct* %7, i32 0, i32 0
  %9 = load %struct.hso_serial*, %struct.hso_serial** %8, align 8
  store %struct.hso_serial* %9, %struct.hso_serial** %2, align 8
  br label %11

10:                                               ; preds = %1
  store %struct.hso_serial* null, %struct.hso_serial** %2, align 8
  br label %11

11:                                               ; preds = %10, %6
  %12 = load %struct.hso_serial*, %struct.hso_serial** %2, align 8
  ret %struct.hso_serial* %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
